lwjgl3 working